<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search city name here</string>
    <string name="entry_delete_msg">These saved temperatures will be deleted after 24 Hrs</string>
    <string name="feels_like">Feels Like</string>
    <string name="min">Min. Temp.</string>
    <string name="max">Max. Temp.</string>
    <string name="save">save</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="colon">\u8208</string>
    <string name="no_items">Oops, you have not saved anything yet..!!</string>
</resources>